# UniPal

./: .gitignore  README.md  package-lock.json  package.json
WorkingModel/: readme.md
backend/: pyproject.toml
backend/TrashFiles/: MixtralAI_Test.py  chatSuggestionRoutes.py  course_suggestion.py  deleteFile.py  humanInterpreter.py  profileFilter.py  sample.txt  unipal.py  uploadTranscript1.py  uploadTranscripts.py  vacation.py
backend/TrashFiles/templates/: home.html
backend/app/: app.py
backend/app/auth0/: appAuth.py  validators.py
backend/app/auth0/models/: mongoModels.py
backend/app/professor_review/: professor.py  professor_reviews.csv
backend/app/prompt/: app_calendar.py  courseSuggestionChat.py  demo.py  profileData.py  prompt.txt
backend/app/routes/: chatCourses.py  courseDataRoute.py
backend/app/routes/__pycache__/: Courses.csv  chatCourses.py
backend/data/: course_data_dump.py  preRequisiteTreeDump.py
frontend/: README.md  index.html  vite.config.mjs
frontend/src/: App.jsx  index.jsx
frontend/src/components/: SignUpNow.module.css
frontend/src/pages/: CalendarComponent.jsx  ProfReview.jsx  ProfReview.module.css  UnipalLandingPage.jsx  UploadTranscripts.jsx
src/: global.css
src/components/: SignUpNow.jsx
src/pages/: Calendar.module.css  Chat.jsx  Chat.module.css  Login.css  Login.jsx  ProfessorReviews.jsx  ProfessorReviews.module.css  ProfilePage.jsx  ProfilePage.module.css  SignupPage.jsx  SignupPage.module.css  UnipalLandingPage.module.css  UploadTranscripts.module.css
