[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <alexandergfoley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
langchain = "^0.0.352"
python-multipart = "^0.0.6"
openai = "^1.6.1"
black = "^23.12.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
